--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,22 +30,20 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Hello, my name is Jeanine White"
-					tagline="I am a Creative Developer who is currently based in Portland, Oregon."
+					title="Hello, my name is Osmar Ruiz"
+					tagline="I am a Creative Developer who is currently based in Leon, Nicaragua."
 					align="start"
 				>
 					<div class="roles">
 						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-						<Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
-						<Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
 					</div>
 				</Hero>
 
 				<img
-					alt="Jeanine White smiling in a red plaid shirt and tortoise shell glasses"
+					alt="Osmar Ruiz"
 					width="480"
 					height="620"
-					src="/assets/portrait.jpg"
+					src="/assets/at-work.JPEG"
 				/>
 			</header>
 
